# pitchphys

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC_DRAFT.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  keepalive.yml  release.yml  test.yml
.streamlit/: config.toml
api/: index.html
app/: streamlit_app.py  utils.py
app/pages/: 01_Pitch_Playground.py  02_Magnus_Explorer.py  03_Fastball_vs_Curveball.py  04_Active_Spin_Gyro.py  05_Drag_Environment.py
changelog/: index.html
contributing/: index.html
docs/: api.md  changelog.md  contributing.md  index.md  tutorials.md
docs/user-guide/: aero-models.md  coordinates.md  environment.md  physics-primer.md  presets.md
examples/: basic_fastball.py  compare_pitch_types.py
notebooks/: 03_magnus_effect_fastball_curveball.ipynb  05_active_spin_vs_gyro_spin.ipynb  09_build_your_own_pitch.ipynb
notebooks/03_magnus_effect_fastball_curveball/: 03_magnus_effect_fastball_curveball.ipynb  index.html
notebooks/05_active_spin_vs_gyro_spin/: 05_active_spin_vs_gyro_spin.ipynb  index.html
notebooks/09_build_your_own_pitch/: index.html
scripts/: build_notebooks.py  capture_screenshots.py  docs_hooks.py
search/: search_index.json
src/pitchphys/: __init__.py  _app_helpers.py  app_launcher.py  constants.py  coordinates.py  units.py
src/pitchphys/aero/: __init__.py  base.py  lift.py  lyu.py
src/pitchphys/core/: __init__.py  ball.py  environment.py  forces.py  pitch.py  simulate.py  trajectory.py
src/pitchphys/metrics/: __init__.py  break_metrics.py
tests/: test_aero_lyu.py  test_aero_models.py  test_aero_nathan.py  test_animation.py  test_app_extras.py  test_app_launcher.py  test_app_utils.py  test_coordinates.py  test_dataclasses.py  test_drag.py  test_environment.py  test_forces.py  test_gravity.py  test_integrator.py  test_magnus.py  test_metrics.py  test_plot3d.py  test_presets.py  test_qualitative.py  test_spin_decay.py  test_units.py  test_viz.py
tutorials/: index.html
user-guide/aero-models/: index.html
user-guide/coordinates/: index.html
user-guide/environment/: index.html
user-guide/physics-primer/: index.html
user-guide/presets/: index.html
(+6 files in other folders)
